# My_LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build_single.ps1
OpenGLBeginner/: OpenGL Solution.sln
OpenGLBeginner/01_OpenGLBeginner/: 01_OpenGLBeginner.cpp  01_OpenGLBeginner.vcxproj  01_OpenGLBeginner.vcxproj.filters
OpenGLBeginner/02_ShaderBeginner/: 01_shaderBeginner.cpp  02_ShaderBeginner.vcxproj  02_ShaderBeginner.vcxproj.filters  02_useShaderClass.cpp  1.frag  Shader.h
OpenGLBeginner/03_TextureBeginner/: 01_texture.cpp  03_TextureBeginner.vcxproj  03_TextureBeginner.vcxproj.filters  1.frag  2.frag
OpenGLBeginner/04_GLM_and_Math/: 01_transform.cpp  02_3D.cpp  03_cubic.cpp  04_GLM_and_Math.vcxproj  04_GLM_and_Math.vcxproj.filters  1.frag  2_3D.vert  Shader.h
OpenGLBeginner/05_Camera/: 01_cameraRotate.cpp  02_cameraFreeMove.cpp  03_camClassVer.cpp  05_Camera.vcxproj  05_Camera.vcxproj.filters  shader.h
OpenGLBeginner/201_color/: 01_color.cpp  201_color.vcxproj  201_color.vcxproj.filters  camera.h  shader.h
OpenGLBeginner/202_Basic_light/: 01_basicLight.cpp  02_basicLight_view_phong.cpp  04_02_with_imgui.cpp  202_Basic_light.filters  202_Basic_light.vcxproj  202_Basic_light.vcxproj.filters  camera.h  imgui.ini  light.frag  object_phong_view.frag  object_phong_world.frag  phong_view.vert  phong_world.vert  utils.h
OpenGLBeginner/OpenGL_201_color1/: 03_basicLight_Gouraud.cpp  Gouraud.frag  Gouraud.vert  OpenGL_201_color1.vcxproj  OpenGL_201_color1.vcxproj.filters  shader.h
Project1/: Project1.sln
Project1/Project1/: Project1.vcxproj
Project1/Project1/Debug/: OpenGL.exe.recipe  OpenGL.ilk  vc143.idb
Project1/Project1/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Project1/Project1/Release/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate
Project1/Project1/src/: Application.cpp
Project1/Project1/x64/Debug/: OpenGL.exe.recipe  OpenGL.ilk  vc143.idb
Project1/Project1/x64/Debug/OpenGL.tlog/: CL.command.1.tlog  Cl.items.tlog  OpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
doc/: imgui_usage.md  opengl 纹理.md
include/: camera.hpp  mesh.hpp  model.hpp  shader.h  shader.hpp  utils.hpp
include/glad/: glad.c  glad.h
lib/: glfw3.lib
src/01_beginner/: CMakeLists.txt
src/01_beginner/01_hello_window/: CMakeLists.txt  README.md  hello.cpp
src/01_beginner/02_shader/: 01_shaderBeginner.cpp  02_useShaderClass.cpp  1.vert  CMakeLists.txt
src/01_beginner/03_texture/: 01_texture.cpp  1.vert  CMakeLists.txt  opengl 纹理.md
src/01_beginner/04_GLM_math/: 01_transform.cpp  02_3D.cpp  03_cubic.cpp  1.vert  CMakeLists.txt
src/01_beginner/05_camera/: 01_cameraRotate.cpp  02_cameraFreeMove.cpp  03_camClassVer.cpp  1.frag  1.vert  CMakeLists.txt  旋转角示意图.drawio
src/02_lighting/: CMakeLists.txt
src/02_lighting/01_color/: 01_color.cpp  CMakeLists.txt  light.frag  object.frag
src/02_lighting/02_basic_light/: 01_basicLight.cpp  02_basicLight_view_phong.cpp  03_basicLight_Gouraud.cpp  04_02_with_imgui.cpp  CMakeLists.txt  Gouraud.vert  imgui_usage.md  light.frag  object_phong_view.frag  object_phong_world.frag  phong_view.vert  phong_world.vert
src/02_lighting/03_material/: 01_material.cpp  CMakeLists.txt  README.md  light.hpp  material.hpp  obj.frag
src/02_lighting/03_texture/: 01_texture.cpp  CMakeLists.txt  obj.vert
src/02_lighting/04_lightmap/: 0401_lightmap.cpp  CMakeLists.txt  README.md  obj.frag
src/02_lighting/05_light_caster/: 0501_light_caster.cpp  CMakeLists.txt  README.md  obj.frag  obj.vert
src/02_lighting/06_multiple_lights/: 0601_multiple_lights.cpp  CMakeLists.txt  README.md  light.frag  light.vert  obj.frag
src/03_modelLoading/: CMakeLists.txt
src/03_modelLoading/01_mesh_and_model/: 030101_mesh_and_model.cpp  CMakeLists.txt  README.md  obj.frag
